# Portfolio

./: .gitignore  Cargo.toml  README.md  Trunk.toml  activities.ts  index.html  index.scss  lyrics.ts  next.config.js  package-lock.json  package.json  projects.ts
.github/workflows/: codeql-analysis.yml
components/: Header.tsx  Icons.tsx  Layout.tsx  Navigation.tsx
config/: index.ts
pages/: 404.tsx  AboutMe.tsx  ContactMe.tsx  MyWorks.tsx  _app.tsx  aboutMe.tsx  contactMe.tsx  index.tsx  myFavoriteLyrics.tsx  myWorks.tsx
pages/api/activities/: index.ts
pages/api/lyrics/: index.ts
pages/api/projects/: index.ts
public/: index.html  manifest.json  projects.json  sw.js  sw.js.map  workbox-24fab9da.js
src/: App.tsx  _config.scss  index.scss  main.rs  projects.json  route.rs
src/components/: AboutMe.scss  AboutMe.tsx  Contact.scss  Contact.tsx  Home.scss  Home.tsx  PageNotFound.scss  PageNotFound.tsx  Works.scss  Works.tsx  header.rs  icons.rs  mod.rs  navigation.rs
src/components/common/: Header.scss  Header.tsx  Icons.scss  Icons.tsx  Navigation.scss  Navigation.tsx
src/pages/: about_me.rs  contact_me.rs  home.rs  mod.rs  my_favorite_lyrics.rs  my_works.rs  page_not_found.rs
static/db/: projects.json
styles/: 404.module.scss  404.scss  AboutMe.module.scss  MyWorks.module.scss  _config.scss  aboutMe.module.scss  aboutMe.scss  contactMe.module.scss  contactMe.scss  globals.scss  home.module.scss  home.scss  myFavoriteLyrics.module.scss  myFavoriteLyrics.scss  myWorks.module.scss  myWorks.scss
styles/components/: Header.module.scss  Icons.module.scss  Navigation.module.scss  header.scss  icons.scss  navigation.scss
