[package]
name = "portfolio_yew"
version = "1.0.0"
edition = "2024"

[dependencies]
gloo = "0.11.0"
gloo-file = "0.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.81", features = ["Navigator", "Clipboard"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
yew_icons = { version = "0.9.0", features = ["bootstrap", "simple_icons"] }

[profile.release]
lto = true
codegen-units = 1
